--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 * {
+    /* reset do CSS */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Titillium Web', sans-serif;
+}
+
+header {
+    background-image: url(./img/bg-mobile.png);
+    background-size: cover;
+    height: ;
 }
