--- a/style.css
+++ b/style.css
@@ -6,8 +6,16 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+/* 1rem = 16px */
+/* 40px = 2.5rem */
+/* de px para rem é só dividir por 16 */
+
 header {
     background-image: url(./img/bg-mobile.png);
     background-size: cover;
-    height: ;
+    height: 8.375rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
