--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 :root{
     --gray-800: #1e293b;
     --gray-600: #475569;
+    --purple: #7C3AED;
 }
 
 header {
@@ -44,4 +45,32 @@ main {
 .descrition p {
     font-size: 0.8125rem;
     color: var(--gray-600);
+    align-items: center;
+}
+
+.input-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-box div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.login label {
+    font-size: 0.875rem;
+    color: var(--gray-800);
+    font-weight: 600;
+}
+
+.login a {
+    color: var(--purple);
+    text-decoration: none;
+    font-size: 0.875rem;
+    font-weight: 600;
+}
+
+.login a:hover {
+    text-decoration: underline;
 }
