--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --gray-400: #94a3b8;
     --purple: #7C3AED;
     --gray-200: #e2e8f0;
+    --white: #FFF;
 }
 
 header {
@@ -95,4 +96,17 @@ main {
 
 .login a:hover {
     text-decoration: underline;
+}
+
+.login button {
+    margin-top: 1rem;
+    padding-block: 1rem;
+    width: 100%;
+    background: var(--purple);
+    border: none;
+    border-radius: 0.25rem;
+    
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: var(--white);
 }
