--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     --gray-600: #475569;
     --gray-400: #94a3b8;
     --purple: #7C3AED;
+    --light-purple: #9f67ff;
     --gray-200: #e2e8f0;
     --white: #FFF;
 }
@@ -112,6 +113,12 @@ main {
     color: var(--white);
 }
 
+.login button:hover {
+    background: var(--light-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .login > p {
     color: var(--gray-600);
 }
@@ -150,10 +157,21 @@ main {
 
     .conteudo {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .bg-desktop {
         display: block;
         width: 100%;
+    }
+
+    .descrition h1 {
+        font-size: 2.25rem;
+    }
+
+    .descrition p {
+        font-size: 1rem;
     }
 }
